@@ -19,7 +19,7 @@ public class Mapping {
     public String getResponse() throws ClassNotFoundException, InstantiationException, IllegalAccessException,
             NoSuchMethodException, SecurityException, InvocationTargetException {
         Class class1 = Class.forName(this.getClassName());
-        Object instance = class1.newInstance();
+        Object instance = class1.getDeclaredConstructor().newInstance();
         Method m = class1.getMethod(methodName);
         return (String) m.invoke(instance);
     }
